cmake_minimum_required(VERSION 3.10)
project(MatrixRain)

if(WIN32)
    message(STATUS "Building for Windows")
    set(CMAKE_CXX_STANDARD 17)
    add_executable(${PROJECT_NAME} Windows.cpp)
    add_definitions(-D_WIN32)
    set(CMAKE_BUILD_TYPE Release)
    set(CMAKE_CXX_FLAGS_RELEASE "-O1 -DNDEBUG")
    set(CMAKE_EXE_LINKER_FLAGS_RELEASE "/OPT:REF /INCREMENTAL:NO /DEBUG:NONE")
elseif(UNIX)
    message(STATUS "Building for Linux")
    set(CMAKE_CXX_STANDARD 17)
    add_executable(${PROJECT_NAME} Linux.cpp)
    add_definitions(-DUNIX)
    find_package(Threads REQUIRED)
    target_link_libraries(${PROJECT_NAME} Threads::Threads)
    target_compile_options(${PROJECT_NAME} PRIVATE -pthread)
    set(CMAKE_BUILD_TYPE Release)
    set(CMAKE_CXX_FLAGS_RELEASE "-Os -DNDEBUG")
    set(CMAKE_EXE_LINKER_FLAGS_RELEASE "-s")
endif()